리드미 + 리플렉션 수정